Enhance README.md with detailed TODOs for future improvements in score distribution calculations and reference population quality. Update svforensics.ipynb to correct metadata formatting and add new cells for audio processing and analysis.

--- a/notebooks/svforensics.ipynb
+++ b/notebooks/svforensics.ipynb
@@ -36,8 +36,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XxeRlJr0M8qB",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "XxeRlJr0M8qB"
       },
       "outputs": [],
       "source": [
@@ -157,8 +157,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "t-9aRqNqSA4C",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "t-9aRqNqSA4C"
       },
       "outputs": [],
       "source": [
@@ -240,8 +240,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "73kdLe5EVLOE",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "73kdLe5EVLOE"
       },
       "outputs": [],
       "source": [
@@ -335,99 +335,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4lcbY0AAVjS4",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "b4R5JFSiWnxr"
       },
       "outputs": [],
       "source": [
         "# @title (Célula 5) Upload dos Arquivos de Áudio do Caso\n",
-        "# @markdown Faça o upload dos arquivos 'questionado(s)' (amostras a verificar) e 'referência(s)' (amostras do locutor conhecido) **deste caso específico**.\n",
-        "# @markdown ---\n",
-        "# @markdown 1. **Questionados:** Clique em \"Escolher arquivos\" abaixo e selecione **todos** os arquivos de áudio questionados.\n",
-        "# @markdown 2. **Referência:** Clique em \"Escolher arquivos\" novamente quando solicitado e selecione **todos** os arquivos de áudio de referência.\n",
-        "\n",
-        "import os\n",
-        "import shutil\n",
-        "from pathlib import Path\n",
-        "from google.colab import files\n",
-        "import logging\n",
-        "\n",
-        "# Usar o logger configurado\n",
-        "logger = logging.getLogger(\"SVF_Colab_Upload_Caso\")\n",
-        "\n",
-        "# Define os diretórios para os arquivos ORIGINAIS do CASO\n",
-        "dir_questionados_orig = \"audios_caso_questionados\" # Nome diferente para evitar conflito\n",
-        "dir_referencia_orig = \"audios_caso_referencia\"     # Nome diferente\n",
-        "logger.info(f\"Diretórios de upload do caso definidos: '{dir_questionados_orig}', '{dir_referencia_orig}'\")\n",
-        "\n",
-        "# Limpa diretórios anteriores\n",
-        "for d in [dir_questionados_orig, dir_referencia_orig]:\n",
-        "    if os.path.exists(d):\n",
-        "        logger.warning(f\"Limpando diretório de caso existente: {d}\")\n",
-        "        shutil.rmtree(d)\n",
-        "    os.makedirs(d, exist_ok=True)\n",
-        "    logger.info(f\"Diretório de caso criado/limpo: {d}\")\n",
-        "\n",
-        "def upload_e_salvar(diretorio_destino, tipo_arquivo_log):\n",
-        "    \"\"\"Função auxiliar para solicitar upload e salvar os arquivos.\"\"\"\n",
-        "    print(f\"\\n➡️ Por favor, faça o upload do(s) arquivo(s) de áudio {tipo_arquivo_log.upper()} (DO CASO):\")\n",
-        "    try:\n",
-        "        uploaded = files.upload()\n",
-        "        if not uploaded:\n",
-        "            logger.warning(f\"Nenhum arquivo {tipo_arquivo_log} do caso foi enviado.\")\n",
-        "            print(f\"⚠️ Nenhum arquivo {tipo_arquivo_log} selecionado.\")\n",
-        "            return False, 0\n",
-        "        else:\n",
-        "            count_saved = 0\n",
-        "            for filename, content in uploaded.items():\n",
-        "                dest_path = Path(diretorio_destino) / filename\n",
-        "                try:\n",
-        "                    with open(dest_path, 'wb') as f:\n",
-        "                        f.write(content)\n",
-        "                    logger.info(f\"Arquivo {tipo_arquivo_log} '{filename}' salvo em '{dest_path}'.\")\n",
-        "                    count_saved += 1\n",
-        "                except Exception as e:\n",
-        "                    logger.error(f\"Erro ao salvar {filename} em {dest_path}: {e}\")\n",
-        "                    print(f\"❌ Erro ao salvar {filename}.\")\n",
-        "            print(f\"✅ {count_saved} arquivo(s) {tipo_arquivo_log} do caso salvo(s) com sucesso.\")\n",
-        "            return True, count_saved\n",
-        "    except Exception as e:\n",
-        "        logger.error(f\"Erro durante o processo de upload para {tipo_arquivo_log}: {e}\")\n",
-        "        print(f\"❌ Ocorreu um erro inesperado durante o upload.\")\n",
-        "        return False, 0\n",
-        "\n",
-        "# --- Executar Upload ---\n",
-        "upload_ok_q, count_q = upload_e_salvar(dir_questionados_orig, \"questionado(s)\")\n",
-        "upload_ok_r, count_r = False, 0\n",
-        "if upload_ok_q and count_q > 0:\n",
-        "    upload_ok_r, count_r = upload_e_salvar(dir_referencia_orig, \"referência\")\n",
-        "elif not upload_ok_q:\n",
-        "     print(\"\\nUpload de arquivos questionados do caso falhou ou foi cancelado.\")\n",
-        "else:\n",
-        "    print(\"\\nNenhum arquivo questionado do caso foi selecionado.\")\n",
-        "\n",
-        "# --- Verificação Final e Armazenamento ---\n",
-        "if upload_ok_q and count_q > 0 and upload_ok_r and count_r > 0:\n",
-        "    logger.info(f\"Upload do caso concluído: {count_q} questionado(s), {count_r} referência(s).\")\n",
-        "    # Guarda os nomes dos diretórios com os arquivos originais DO CASO\n",
-        "    %store dir_questionados_orig\n",
-        "    %store dir_referencia_orig\n",
-        "    print(\"\\n🎉 Uploads do caso concluídos com sucesso!\")\n",
-        "else:\n",
-        "    logger.error(\"Upload do caso falhou ou arquivos essenciais não foram enviados.\")\n",
-        "    print(\"\\n❌ Atenção: Upload do caso não concluído. Execute a célula novamente.\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "b4R5JFSiWnxr",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "# @title (Célula 5) Upload dos Arquivos de Áudio do Caso (Saída Concisa v3)\n",
         "# @markdown Faça o upload dos arquivos 'questionado(s)' e 'referência(s)' **deste caso específico**.\n",
         "# @markdown Os arquivos serão movidos para os diretórios corretos.\n",
         "# @markdown ---\n",
@@ -554,6 +467,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "YCmktf7aYe_m"
+      },
+      "outputs": [],
       "source": [
         "# @title (Célula 6) Preparar Arquivos de Áudio do Caso (Processamento Direto)\n",
         "# @markdown Processa os áudios originais do caso, salvando chunks diretamente em 'probe' e 'reference'.\n",
@@ -678,16 +597,16 @@
         "# !ls -l \"{parent_chunk_dir_probe_caso}\"\n",
         "# print(f\"\\nConteúdo de '{parent_chunk_dir_ref_caso}':\")\n",
         "# !ls -l \"{parent_chunk_dir_ref_caso}\"\n"
-      ],
-      "metadata": {
-        "id": "YCmktf7aYe_m",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "8stapJXBdLs2"
+      },
+      "outputs": [],
       "source": [
         "# @title (Célula 7) Extrair Embeddings do Caso (Progresso por Chunk)\n",
         "# @markdown Analisa os segmentos de áudio (.wav) do caso e extrai as características (embeddings).\n",
@@ -822,16 +741,16 @@
         "    logger.error(f\"Erro ao salvar arquivos de embeddings .pt do caso: {e}\", exc_info=True)\n",
         "    print(f\"\\n❌ Erro ao salvar arquivos de embeddings do caso.\")\n",
         "    raise e"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "8stapJXBdLs2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "QE_JtqfEe-48"
+      },
+      "outputs": [],
       "source": [
         "# @title (Célula 8) Análise Final e Plotagem (Saída Concisa)\n",
         "# @markdown Compara os embeddings do caso com os de referência populacional e visualiza os resultados.\n",
@@ -997,19 +916,14 @@
         "\n",
         "# Manter mensagem final de sucesso\n",
         "print(\"\\n🎉 Análise concluída!\")\n"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "QE_JtqfEe-48"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -1017,8 +931,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
