Update .gitignore to exclude history and report directories. Add English README.md and CLI usage documentation for SVforensics, detailing installation, usage, and project structure. Revise README.md to reflect changes and improve clarity.

--- a/notebooks/svforensics.ipynb
+++ b/notebooks/svforensics.ipynb
@@ -474,7 +474,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title (Célula 6) Preparar Arquivos de Áudio do Caso (Processamento Direto)\n",
+        "# @title (Célula 6) Preparar Arquivos de Áudio do Caso\n",
         "# @markdown Processa os áudios originais do caso, salvando chunks diretamente em 'probe' e 'reference'.\n",
         "\n",
         "import os\n",
@@ -608,7 +608,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title (Célula 7) Extrair Embeddings do Caso (Progresso por Chunk)\n",
+        "# @title (Célula 7) Extrair Embeddings do Caso\n",
         "# @markdown Analisa os segmentos de áudio (.wav) do caso e extrai as características (embeddings).\n",
         "# @markdown **Este processo pode ser demorado**.\n",
         "\n",
@@ -752,7 +752,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title (Célula 8) Análise Final e Plotagem (Saída Concisa)\n",
+        "# @title (Célula 8) Análise Final e Plotagem\n",
         "# @markdown Compara os embeddings do caso com os de referência populacional e visualiza os resultados.\n",
         "\n",
         "import os\n",
