Update LICENSE and README files to reflect new Restricted Public License with Source Available under Agreement. Revise documentation to clarify usage restrictions, authorized access, and collaboration guidelines for the SVforensics project. Add new private repository access documentation and ensure all references to the previous license are removed.

--- a/notebooks/svforensics.ipynb
+++ b/notebooks/svforensics.ipynb
@@ -11,11 +11,29 @@
       "source": [
         "# @title (Célula 1) Instalar o Pacote SVforensics\n",
         "# @markdown Esta célula instala o pacote de software necessário diretamente do GitHub.\n",
+        "# @markdown **Para colaboradores externos:** Cole seu token de acesso fornecido oficialmente no campo abaixo.\n",
+        "# @markdown **Para uso interno (Polícia Científica):** Deixe o campo vazio.\n",
         "# @markdown Pode levar um ou dois minutos para concluir.\n",
+        "\n",
+        "# @markdown ---\n",
+        "# @markdown **Token de Acesso (apenas para colaboradores externos):**\n",
+        "TOKEN = \"\" # @param {type:\"string\"}\n",
+        "\n",
         "print(\"Instalando SVforensics...\")\n",
+        "\n",
+        "# Configurar URL de instalação baseada no token\n",
+        "if TOKEN.strip():\n",
+        "    # Para colaboradores externos com token\n",
+        "    install_url = f\"git+https://{TOKEN}@github.com/sepai-dev/SVforensics.git\"\n",
+        "    print(\"🔐 Usando autenticação via token para colaborador externo...\")\n",
+        "else:\n",
+        "    # Para uso interno (conta organizacional)\n",
+        "    install_url = \"git+https://github.com/sepai-dev/SVforensics.git\"\n",
+        "    print(\"🏢 Usando acesso institucional interno...\")\n",
+        "\n",
         "# -q para menos output, --no-cache-dir pode ajudar a evitar problemas de cache no Colab\n",
-        "!pip install --no-cache-dir git+https://github.com/sepai-dev/SVforensics.git -q\n",
-        "print(\"Instalação concluída!\")\n",
+        "%pip install --no-cache-dir {install_url} -q\n",
+        "print(\"✅ Instalação concluída!\")\n",
         "\n",
         "# Importar bibliotecas padrão que vamos precisar\n",
         "import os\n",
@@ -59,6 +77,21 @@
         "\n",
         "# --- 1. Baixar Arquivos de Configuração ---\n",
         "logger.info(\"Iniciando download dos arquivos de configuração...\")\n",
+        "\n",
+        "# Usar o mesmo token da célula anterior se disponível (para colaboradores externos)\n",
+        "try:\n",
+        "    auth_token = TOKEN.strip() if 'TOKEN' in globals() and TOKEN.strip() else None\n",
+        "except NameError:\n",
+        "    auth_token = None\n",
+        "\n",
+        "# Configurar headers de autenticação se necessário\n",
+        "headers = {}\n",
+        "if auth_token:\n",
+        "    headers[\"Authorization\"] = f\"token {auth_token}\"\n",
+        "    logger.info(\"🔐 Usando autenticação para download de arquivos de configuração\")\n",
+        "else:\n",
+        "    logger.info(\"🏢 Usando acesso institucional para download de arquivos de configuração\")\n",
+        "\n",
         "config_dir = \"config\"\n",
         "os.makedirs(config_dir, exist_ok=True)\n",
         "config_files_urls = {\n",
@@ -73,7 +106,7 @@
         "    filepath = Path(config_dir) / filename\n",
         "    try:\n",
         "        logger.info(f\"Baixando {filename} de {url}...\")\n",
-        "        response = requests.get(url, timeout=20)\n",
+        "        response = requests.get(url, headers=headers, timeout=20)\n",
         "        response.raise_for_status()\n",
         "        with open(filepath, 'wb') as f:\n",
         "            f.write(response.content)\n",
