Revise svforensics.ipynb to clarify token usage for repository access.

--- a/notebooks/svforensics.ipynb
+++ b/notebooks/svforensics.ipynb
@@ -23,13 +23,14 @@
         "\n",
         "# Configurar URL de instalação baseada no token\n",
         "if TOKEN.strip():\n",
-        "    # Para colaboradores externos com token\n",
+        "    # Para colaboradores autorizados com token\n",
         "    install_url = f\"git+https://{TOKEN}@github.com/sepai-dev/SVforensics.git\"\n",
-        "    print(\"🔐 Usando autenticação via token para colaborador externo...\")\n",
+        "    print(\"🔐 Usando token de acesso autorizado...\")\n",
         "else:\n",
-        "    # Para uso interno (conta organizacional)\n",
-        "    install_url = \"git+https://github.com/sepai-dev/SVforensics.git\"\n",
-        "    print(\"🏢 Usando acesso institucional interno...\")\n",
+        "    # Sem token - acesso negado para repositório privado\n",
+        "    print(\"❌ ERRO: Token de acesso necessário para repositório privado.\")\n",
+        "    print(\"   Entre em contato com a Polícia Científica de Goiás para obter autorização.\")\n",
+        "    raise ValueError(\"Token de acesso obrigatório.\")\n",
         "\n",
         "# -q para menos output, --no-cache-dir pode ajudar a evitar problemas de cache no Colab\n",
         "%pip install --no-cache-dir {install_url} -q\n",
