Revise LICENSE and documentation to clarify access requirements for government institutions and authorized users. Update svforensics.ipynb to emphasize the necessity of a token for accessing the private repository.

--- a/notebooks/svforensics.ipynb
+++ b/notebooks/svforensics.ipynb
@@ -11,12 +11,12 @@
       "source": [
         "# @title (Célula 1) Instalar o Pacote SVforensics\n",
         "# @markdown Esta célula instala o pacote de software necessário diretamente do GitHub.\n",
-        "# @markdown **Para colaboradores externos:** Cole seu token de acesso fornecido oficialmente no campo abaixo.\n",
-        "# @markdown **Para uso interno (Polícia Científica):** Deixe o campo vazio.\n",
+        "# @markdown **Para todos os usuários autorizados:** Cole seu token de acesso fornecido oficialmente no campo abaixo.\n",
+        "# @markdown O token é obrigatório para acessar o repositório privado do SVforensics.\n",
         "# @markdown Pode levar um ou dois minutos para concluir.\n",
         "\n",
         "# @markdown ---\n",
-        "# @markdown **Token de Acesso (apenas para colaboradores externos):**\n",
+        "# @markdown **Token de Acesso (obrigatório para acesso ao repositório):**\n",
         "TOKEN = \"\" # @param {type:\"string\"}\n",
         "\n",
         "print(\"Instalando SVforensics...\")\n",
@@ -89,9 +89,10 @@
         "headers = {}\n",
         "if auth_token:\n",
         "    headers[\"Authorization\"] = f\"token {auth_token}\"\n",
-        "    logger.info(\"🔐 Usando autenticação para download de arquivos de configuração\")\n",
+        "    logger.info(\"🔐 Usando token de acesso para download de arquivos de configuração\")\n",
         "else:\n",
-        "    logger.info(\"🏢 Usando acesso institucional para download de arquivos de configuração\")\n",
+        "    logger.info(\"❌ ERRO: Token de acesso necessário para repositório privado\")\n",
+        "    raise ValueError(\"Token de acesso obrigatório para download de arquivos de configuração\")\n",
         "\n",
         "config_dir = \"config\"\n",
         "os.makedirs(config_dir, exist_ok=True)\n",
